# RobotDynamicsAi

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: base_agent.py  delivery_agent.py  development_agent.py  planning_agent.py  testing_agent.py
agents/development_modules/: __init__.py  registry.py
agents/development_modules/body_parts/: __init__.py  arms.py  legs.py  sensors.py  waist.py
configs/: agents.yaml  project.yaml  training.yaml
core/: logger.py  orchestrator.py  state_manager.py  task_models.py
core/intelligence/: __init__.py  engine.py  memory.py  planner.py  safety_governor.py  skill_router.py  world_model.py
docs/: agent_workflow.md  architecture.md  development_body_parts.md  experiments.md  planning_process.md  planning_strategy.md  requirements_document.md
envs/: humanoid_env.py  reward.py  wrappers.py
frontend/: app.py
frontend/templates/: index.html
scripts/: generate_report.py  run_evaluation.py  run_pipeline.py  run_training.py
tests/: test_agents.py  test_env.py  test_humanoid_api.py  test_intelligence.py  test_reward.py  test_training.py
training/: callbacks.py  evaluate.py  model_manager.py  train_ppo.py
